syntax = "proto3"; // it's tell the protobuf compiler what syntax we're going to use, proto3 is the version 

option csharp_namespace = "Discount.Grpc"; 

package discount; // tells protobuf compiler to generate c-sharp classes within the specified namespace

// The discount services defination 
service DiscountProtoService{
	// Discount CRUD Operations
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

// defining the object for each service followed by parameter order like 1,2,3,4 etc

message GetDiscountRequest {
	string productName =1;
}

message CouponModel {
	int32 id =1;
	string productName = 2;
	string description = 3;
	int32 amount =4;
} 

message CreateDiscountRequest{
	CouponModel coupon =1;
}

message UpdateDiscountRequest {
	CouponModel coupon =1;
}

message DeleteDiscountRequest {
	CouponModel coupon =1;
}

message DeleteDiscountResponse {
	bool success =1;
}